<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/world_icon"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news_icon"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_knowledge"
            android:icon="@drawable/knowledge_icon"
            android:title="@string/menu_knowledge" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/contact_icon"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_charity"
            android:icon="@drawable/charity_icon"
            android:title="@string/menu_charity" />

        <item
            android:id="@+id/nav_earthquake"
            android:icon="@drawable/earthquake_icon"
            android:title="@string/menu_earth" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="ရာသီဥတုအခြေအနေ" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

        </menu>

    </item>

</menu>
